--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "apollo-boost": "^0.4.4",
+    "apollo-datasource": "^0.6.3",
     "apollo-datasource-rest": "^0.6.6",
     "core-js": "^2.6.5",
     "firebase": "^4.13.1",
